# myst-spec

./: .pre-commit-config.yaml  .readthedocs.yml  README.md  pyproject.toml
docs/: conf.py  index.md  spec-cmark.md
schema/: mdast-cmark.json  unist.json
src/myst_spec_py/: __init__.py  __main__.py  common.py  mdast_to_html.py  mdit_to_mdast.py
tests/: test_cmark_spec.py
