[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "myst_spec_py"
authors = [{name = "Chris Sewell", email = "chrisj_sewell@hotmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["markdown-it-py~=2.0.1"]

[project.urls]
Home = "https://github.com/chrisjsewell/commonmark-ast-spec"

[project.scripts]
myst-spec = "myst_spec_py.__main__:cli_myst_spec"

[project.optional-dependencies]
testing = ["pytest"]
docs = ["myst_parser~=0.17.0", "sphinx-design", "sphinx-copybutton", "furo"]

[tool.isort]
profile = "black"
force_sort_within_sections = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39

[testenv]
usedevelop=True

[testenv:py{38,39,310}]
description = Run the test suite
extras = testing
deps = black
commands = pytest {posargs:tests/}

[testenv:cli]
description = Run the CLI
commands =
    python -m myst_spec_py {posargs}

[testenv:docs]
description = Generate documentation
extras = docs
allowlist_externals =
    echo
    rm
commands_pre = rm -rf docs/_build/html
commands = sphinx-build -nW --keep-going -b html docs/ docs/_build/html
commands_post =
    echo "open docs/_build/html/index.html"
"""
